SET(
CAIRO_HAS_XLIB_SURFACE 0 )
SET(
CAIRO_HAS_XLIB_XRENDER_SURFACE 0 )
SET(
CAIRO_HAS_XCB_SURFACE 0 )
SET(
CAIRO_HAS_XLIB_XCB_FUNCTIONS 0 )
SET(
CAIRO_HAS_XCB_SHM_FUNCTIONS 0 )
SET(
CAIRO_HAS_QT_SURFACE 0 )
SET(
CAIRO_HAS_QUARTZ_SURFACE 0 )
SET(
CAIRO_HAS_QUARTZ_FONT 0 )
SET(
CAIRO_HAS_QUARTZ_IMAGE_SURFACE 0 )
SET(
CAIRO_HAS_WIN32_SURFACE 1 )
SET(
CAIRO_HAS_WIN32_FONT 1 )
SET(
CAIRO_HAS_SKIA_SURFACE 0 )
SET(
CAIRO_HAS_OS2_SURFACE 0 )
SET(
CAIRO_HAS_BEOS_SURFACE 0 )
SET(
CAIRO_HAS_DRM_SURFACE 0 )
SET(
CAIRO_HAS_DRM_XR_FUNCTIONS 0 )
SET(
CAIRO_HAS_GALLIUM_SURFACE 0 )
SET(
CAIRO_HAS_XCB_DRM_FUNCTIONS 0 )
SET(
CAIRO_HAS_PNG_FUNCTIONS 1 )
SET(
CAIRO_HAS_GL_SURFACE 0 )
SET(
CAIRO_HAS_DIRECTFB_SURFACE 0 )
SET(
CAIRO_HAS_VG_SURFACE 0 )
SET(
CAIRO_HAS_EGL_FUNCTIONS 0 )
SET(
CAIRO_HAS_GLX_FUNCTIONS 0 )
SET(
CAIRO_HAS_WGL_FUNCTIONS 0 )
SET(
CAIRO_HAS_SCRIPT_SURFACE 1 )
SET(
CAIRO_HAS_FT_FONT 0 )
SET(
CAIRO_HAS_FC_FONT 0 )
SET(
CAIRO_HAS_PS_SURFACE 1 )
SET(
CAIRO_HAS_PDF_SURFACE 1 )
SET(
CAIRO_HAS_SVG_SURFACE 1 )
SET(
CAIRO_HAS_TEST_SURFACES 0 )
SET(
CAIRO_HAS_TEE_SURFACE 0 )
SET(
CAIRO_HAS_XML_SURFACE 0 )
SET(
CAIRO_HAS_PTHREAD 0 )
SET(
CAIRO_HAS_GOBJECT_FUNCTIONS 0 )
SET(
CAIRO_HAS_TRACE 0 )
SET(
CAIRO_HAS_INTERPRETER 1 )
SET(
CAIRO_HAS_SYMBOL_LOOKUP 0 )

include_directories(
	${GATEWAYDEPS_SOURCE_DIR}/pixman/pixman
	${GATEWAYDEPS_SOURCE_DIR}/libpng
    ${GATEWAYDEPS_BINARY_DIR}/libpng_cmake
	${GATEWAYDEPS_SOURCE_DIR}/zlib
	${GATEWAYDEPS_SOURCE_DIR}/cairo
)

find_package(cygwin)
message("Using Cygwin make at ${CYGWIN_INSTALL_PATH}/bin/make to set up cairo features")

add_custom_command(OUTPUT src/cairo-features.h
	COMMAND ${CYGWIN_INSTALL_PATH}/bin/make -f ${GATEWAYDEPS_SOURCE_DIR}/cairo/build/Makefile.win32.features-h
	WORKING_DIRECTORY ${GATEWAYDEPS_SOURCE_DIR}/cairo
)

add_custom_target(UPDATE_CAIRO_FEATURES_H ALL
	DEPENDS src/cairo-features.h
)

SET_PROPERTY(TARGET UPDATE_CAIRO_FEATURES_H PROPERTY FOLDER "cairo")

add_subdirectory(src)